feat: Implement messaging logic
This commit uses the local database as the single source of truth for
retrieving messages associated with users. By default, messages will
retrieved in descending order.
ChatDetailFragment will fetch the necessary messages for the chat and
allows the message to be sent only if it is not blank.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Whatsmock</string>
 
     <string name="description_imageView_avatar">Avatar Image</string>
+    <string name="description_imageView_send">Send Message</string>
+
+    <string name="text_message">Message</string>
 </resources>
