feat: Add dark theme support on Android 10
By default, the application will follow the system theme. On Android 10,
an option to select theme is available. The setting is persisted through
shared preferences API.
The commit uses material components them as the base theme instead of
AppCompat theming

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="description_imageView_send">Send Message</string>
 
     <string name="text_message">Message</string>
+
+    <string name="action_select_theme">Select Theme</string>
+
+    <string name="pref_key_theme" translatable="false">THEME</string>
+
+    <string-array name="themes">
+        <item>Light</item>
+        <item>Dark</item>
+        <item>System Default</item>
+    </string-array>
 </resources>
